# iNicePython

./: .gitignore
DependentCodes/: mixtools_1.1.0_comments_gammamixEM.R  mixtools_1_1_0_gammamixEM.R  testGammamix.R
DependentCodes/R-devel_2020-05-20/R-devel/: Makeconf  SVN-REVISION  config.status  libtool
DependentCodes/R-devel_2020-05-20/R-devel/doc/: Makefile  NEWS  NEWS.2.rds  NEWS.3.rds  NEWS.rds  R.1
DependentCodes/R-devel_2020-05-20/R-devel/doc/html/: NEWS.html  R-admin.html
DependentCodes/R-devel_2020-05-20/R-devel/doc/manual/: Makefile  R-FAQ.html  R-admin.html  R-data.html  R-exts.html  R-intro.html  R-ints.html  R-lang.html  version.texi
DependentCodes/R-devel_2020-05-20/R-devel/etc/: Makeconf  Renviron
DependentCodes/R-devel_2020-05-20/R-devel/src/: CMakeLists.txt
DependentCodes/R-devel_2020-05-20/R-devel/src/include/: Rversion.h
DependentCodes/R-devel_2020-05-20/R-devel/src/main/: Makefile
DependentCodes/R-devel_2020-05-20/R-devel/src/nmath/: dpois.c  lgamma.c
DependentCodes/R-devel_2020-05-20/R-devel/src/scripts/: R.fe  R.sh  Rcmd
DependentCodes/R-devel_2020-05-20/R-devel/src/unix/: Rscript
DependentCodes/R-devel_2020-05-20/R-devel/tests/Embedding/: Makefile
DependentCodes/R_nlm/: r_nlm.c
DependentCodes/mixtools_1.1.0/mixtools/R/: gammamixEM.R  gammamixinit.R
INiceSO_DFC/: DPC.py  GenerateManualData.py  INiceBasedOnKNN(OriginalVersion).py  INiceMO.py  INiceSOBasedOnDPC.py  INiceSOBasedOnDPC_KEELDataset.py  README.txt  huatu.py  ╗¡├▄╢╚═╝.py  ╠ß╚í╓╨╨─╡π_▓Γ╩╘.py
PersonalHome/hongjie/: README.md  gammamixEM.py
PersonalHome/jianfei/NLMcppShared/: CMakeLists.txt  library.h
PersonalHome/jianfei/Test_R_gammamixEM/: gammamixEM.R  gammamixinit.R  testGammamix.R
PersonalHome/jianfei/nlmPythonClient/: MixedGamma.py  QuadObjectiveFun.py  nlmMinimizer.py  nlm_simpleClient.py  testMixedGamma.py
PersonalHome/jianfei/nlmPythonClient_Experi/: GammaData2.csv  GammaMixtureGen.py  INiceSO.py  MixedGamma.py  testMixedGamma.py
PersonalHome/jianfei/nlmShared/: CMakeLists.txt  Makefile  library.h  nlm_simple.cpp  nlm_toy.cpp  r_nlm.c  uncmin.c
PersonalHome/jianfei/nlm_simple/: CMakeLists.txt  FunctionInfo.cpp  FunctionInfo.h  fmin2.cpp  nlm_simple.cpp  nlm_simple.h  nlm_tester.h  r_nlm.cpp  uncmin.cpp  uncmin.h
PersonalHome/jianfei/nlm_simple/include/: config.h
PersonalHome/jianfei/nlm_simple_error/: CMakeLists.txt  nlm_simple.cpp
PersonalHome/jianfei/nlm_simple_error/include/: Rmath.h
PersonalHome/jianfei/nlm_simple_failed/: CMakeLists.txt  FunctionInfo.cpp  fmax2.c  fmin2.c  nlm_simple.cpp  nlm_simple.h  nlm_tester.cpp  nmath_slim.h  uncmin.cpp  uncmin.h
PersonalHome/jianfei/slimNLMshared/: CMakeLists.txt
PersonalHome/jingwen/: DifferenceCompute.py  GenerateData.py  gammainit.py
doc/: .~lock.compile_comments.doc#  GammaMix+Model+Results.docx  compile_comments.doc  ctypes.docx  diff_R_numpy_basicFuns.docx  git_learningDoc.docx
nlmPythonClient/: GammaData3.csv  GenerateData.py  MixedGamma.py  QuadObjectiveFun.py  testMixedGamma.py
nlmPythonClient_dgamma/: GammaData11.csv  GammaMixtureGen.py  GammaPdf.py  GenerateData.py  MixedGamma.py  testMixedGamma.py
nlm_simple/: Makefile  fmax2.cpp  nlm_simple.cpp  nlm_simple.h  nlm_tester.cpp  uncmin.cpp  uncmin.h
