cmake_minimum_required(VERSION 3.12)
project(src C)

set(CMAKE_C_STANDARD 11)

include_directories(extra/graphapp)
include_directories(extra/intl)
include_directories(extra/tre)
include_directories(extra/trio)
include_directories(extra/tzone)
include_directories(extra/xdr/rpc)
include_directories(gnuwin32)
include_directories(gnuwin32/fixed)
include_directories(gnuwin32/fixed/h)
include_directories(gnuwin32/getline)
include_directories(include)
include_directories(include/R_ext)
include_directories(include/Rmodules)
include_directories(include/vg)
include_directories(library/graphics/src)
include_directories(library/grDevices/src)
include_directories(library/grDevices/src/cairo)
include_directories(library/grid/src)
include_directories(library/methods/src)
include_directories(library/parallel/src)
include_directories(library/stats/src)
include_directories(library/tcltk/src)
include_directories(library/tools/src)
include_directories(library/utils/src)
include_directories(main)
include_directories(modules/internet)
include_directories(modules/lapack)
include_directories(modules/X11)
include_directories(nmath)
include_directories(unix)

add_executable(src
        appl/integrate.c
        appl/interv.c
        appl/lbfgsb.c
        appl/maxcol.c
        appl/optim.c
        appl/pretty.c
        appl/uncmin.c
        extra/blas/blas00.c
        extra/graphapp/arith.c
        extra/graphapp/array.c
        extra/graphapp/bitmaps.c
        extra/graphapp/buttons.c
        extra/graphapp/clipboard.c
        extra/graphapp/context.c
        extra/graphapp/controls.c
        extra/graphapp/cursors.c
        extra/graphapp/dialogs.c
        extra/graphapp/drawing.c
        extra/graphapp/drawtext.c
        extra/graphapp/events.c
        extra/graphapp/fonts.c
        extra/graphapp/ga.h
        extra/graphapp/gbuttons.c
        extra/graphapp/gdraw.c
        extra/graphapp/gif.c
        extra/graphapp/gimage.c
        extra/graphapp/gmenus.c
        extra/graphapp/graphapp.h
        extra/graphapp/image.c
        extra/graphapp/init.c
        extra/graphapp/internal.h
        extra/graphapp/menus.c
        extra/graphapp/metafile.c
        extra/graphapp/objects.c
        extra/graphapp/printer.c
        extra/graphapp/rgb.c
        extra/graphapp/status.c
        extra/graphapp/stdimg.c
        extra/graphapp/stdimg.h
        extra/graphapp/str.h
        extra/graphapp/strings.c
        extra/graphapp/tooltips.c
        extra/graphapp/windows.c
        extra/intl/bindtextdom.c
        extra/intl/dcgettext.c
        extra/intl/dcigettext.c
        extra/intl/dcngettext.c
        extra/intl/dgettext.c
        extra/intl/dngettext.c
        extra/intl/eval-plural.h
        extra/intl/explodename.c
        extra/intl/finddomain.c
        extra/intl/gettext.c
        extra/intl/gettextP.h
        extra/intl/gmo.h
        extra/intl/hash-string.c
        extra/intl/hash-string.h
        extra/intl/intl-compat.c
        extra/intl/intl-exports.c
        extra/intl/l10nflist.c
        extra/intl/langprefs.c
        extra/intl/loadinfo.h
        extra/intl/loadmsgcat.c
        extra/intl/localcharset.c
        extra/intl/localcharset.h
        extra/intl/localename.c
        extra/intl/lock.c
        extra/intl/lock.h
        extra/intl/ngettext.c
        extra/intl/osdep.c
        extra/intl/plural-exp.c
        extra/intl/plural-exp.h
        extra/intl/plural.c
        extra/intl/printf-args.c
        extra/intl/printf-args.h
        extra/intl/printf-parse.c
        extra/intl/printf-parse.h
        extra/intl/printf.c
        extra/intl/textdomain.c
        extra/intl/tsearch.c
        extra/intl/tsearch.h
        extra/intl/vasnprintf.c
        extra/intl/vasnprintf.h
        extra/intl/vasnwprintf.h
        extra/intl/wprintf-parse.h
        extra/intl/xsize.h
        extra/tre/regcomp.c
        extra/tre/regerror.c
        extra/tre/regexec.c
        extra/tre/tre-ast.c
        extra/tre/tre-ast.h
        extra/tre/tre-compile.c
        extra/tre/tre-compile.h
        extra/tre/tre-config.h
        extra/tre/tre-internal.h
        extra/tre/tre-match-approx.c
        extra/tre/tre-match-backtrack.c
        extra/tre/tre-match-parallel.c
        extra/tre/tre-match-utils.h
        extra/tre/tre-mem.c
        extra/tre/tre-mem.h
        extra/tre/tre-parse.c
        extra/tre/tre-parse.h
        extra/tre/tre-stack.c
        extra/tre/tre-stack.h
        extra/tre/tre.h
        extra/tre/xmalloc.c
        extra/tre/xmalloc.h
        extra/trio/compat.c
        extra/trio/strio.h
        extra/trio/trio.c
        extra/trio/trio.h
        extra/trio/triodef.h
        extra/trio/trionan.c
        extra/trio/trionan.h
        extra/trio/triop.h
        extra/trio/triostr.c
        extra/trio/triostr.h
        extra/tzone/localtime.c
        extra/tzone/registryTZ.c
        extra/tzone/strftime.c
        extra/tzone/tzfile.h
        extra/win_iconv/win_iconv.c
        extra/xdr/rpc/types.h
        extra/xdr/rpc/xdr.h
        extra/xdr/xdr.c
        extra/xdr/xdr_float.c
        extra/xdr/xdr_mem.c
        extra/xdr/xdr_stdio.c
        gnuwin32/fixed/h/config.h
        gnuwin32/fixed/h/iconv.h
        gnuwin32/fixed/h/psignal.h
        gnuwin32/fixed/h/Rconfig.h
        gnuwin32/fixed/h/trioremap.h
        gnuwin32/front-ends/graphappmain.c
        gnuwin32/front-ends/open.c
        gnuwin32/front-ends/R.c
        gnuwin32/front-ends/rcmd.c
        gnuwin32/front-ends/rcmdfn.c
        gnuwin32/front-ends/Renviron.c
        gnuwin32/front-ends/Rfe.c
        gnuwin32/front-ends/rgui.c
        gnuwin32/front-ends/rpwd.c
        gnuwin32/front-ends/RSetReg.c
        gnuwin32/front-ends/rterm.c
        gnuwin32/front-ends/rtest.c
        gnuwin32/getline/getline.c
        gnuwin32/getline/getline.h
        gnuwin32/getline/testgl.c
        gnuwin32/getline/wc_history.c
        gnuwin32/getline/wc_history.h
        gnuwin32/installer/uuidgen.c
        gnuwin32/windlgs/src/ttest.c
        gnuwin32/console.c
        gnuwin32/console.h
        gnuwin32/consolestructs.h
        gnuwin32/dos_wglob.c
        gnuwin32/dos_wglob.h
        gnuwin32/dynload.c
        gnuwin32/editor.c
        gnuwin32/editor.h
        gnuwin32/embeddedR.c
        gnuwin32/extra.c
        gnuwin32/guicolors.h
        gnuwin32/malloc.c
        gnuwin32/opt.c
        gnuwin32/opt.h
        gnuwin32/pager.c
        gnuwin32/preferences.c
        gnuwin32/preferences.h
        gnuwin32/psignal.c
        gnuwin32/rgui_UTF8.h
        gnuwin32/rhome.c
        gnuwin32/rt_complete.c
        gnuwin32/rui.c
        gnuwin32/rui.h
        gnuwin32/run.c
        gnuwin32/run.h
        gnuwin32/shext.c
        gnuwin32/sys-win32.c
        gnuwin32/system.c
        gnuwin32/win-nls.h
        include/R_ext/Altrep.h
        include/R_ext/Applic.h
        include/R_ext/Arith.h
        include/R_ext/BLAS.h
        include/R_ext/Boolean.h
        include/R_ext/Callbacks.h
        include/R_ext/Complex.h
        include/R_ext/Connections.h
        include/R_ext/Constants.h
        include/R_ext/Error.h
        include/R_ext/eventloop.h
        include/R_ext/GetX11Image.h
        include/R_ext/GraphicsDevice.h
        include/R_ext/GraphicsEngine.h
        include/R_ext/Itermacros.h
        include/R_ext/Lapack.h
        include/R_ext/libextern.h
        include/R_ext/Linpack.h
        include/R_ext/MathThreads.h
        include/R_ext/Memory.h
        include/R_ext/Parse.h
        include/R_ext/Print.h
        include/R_ext/PrtUtil.h
        include/R_ext/QuartzDevice.h
        include/R_ext/R-ftp-http.h
        include/R_ext/Rallocators.h
        include/R_ext/Random.h
        include/R_ext/Rdynload.h
        include/R_ext/Riconv.h
        include/R_ext/RS.h
        include/R_ext/RStartup.h
        include/R_ext/stats_package.h
        include/R_ext/stats_stubs.h
        include/R_ext/Utils.h
        include/R_ext/Visibility.h
        include/Rmodules/Rinternet.h
        include/Rmodules/Rlapack.h
        include/Rmodules/RX11.h
        include/vg/memcheck.h
        include/vg/valgrind.h
        include/config.h
        include/Defn.h
        include/Errormsg.h
        include/Fileio.h
        include/Graphics.h
        include/GraphicsBase.h
        include/Internal.h
        include/IOStuff.h
        include/Parse.h
        include/Print.h
        include/R.h
        include/Rconfig.h
        include/Rconnections.h
        include/Rdefines.h
        include/Rdynpriv.h
        include/Rembedded.h
        include/Rgraphics.h
        include/Rinlinedfuns.h
        include/Rinterface.h
        include/Rinternals.h
        include/rlocale.h
        include/Rmath.h
        include/Rversion.h
        include/S.h
        include/Startup.h
        library/graphics/src/base.c
        library/graphics/src/graphics.c
        library/graphics/src/graphics.h
        library/graphics/src/init.c
        library/graphics/src/par-common.c
        library/graphics/src/par.c
        library/graphics/src/plot.c
        library/graphics/src/plot3d.c
        library/graphics/src/stem.c
        library/grDevices/src/cairo/cairoBM.c
        library/grDevices/src/cairo/cairoBM.h
        library/grDevices/src/cairo/cairoFns.c
        library/grDevices/src/axis_scales.c
        library/grDevices/src/chull.c
        library/grDevices/src/colors.c
        library/grDevices/src/devCairo.c
        library/grDevices/src/devices.c
        library/grDevices/src/devPicTeX.c
        library/grDevices/src/devPS.c
        library/grDevices/src/devQuartz.c
        library/grDevices/src/devWindows.c
        library/grDevices/src/devWindows.h
        library/grDevices/src/grDevices.h
        library/grDevices/src/init.c
        library/grDevices/src/qdBitmap.c
        library/grDevices/src/qdBitmap.h
        library/grDevices/src/qdCocoa.h
        library/grDevices/src/qdCocoa.m
        library/grDevices/src/qdPDF.c
        library/grDevices/src/qdPDF.h
        library/grDevices/src/stubs.c
        library/grDevices/src/winbitmap.c
        library/grDevices/src/winbitmap.h
        library/grid/src/gpar.c
        library/grid/src/grid.c
        library/grid/src/grid.h
        library/grid/src/just.c
        library/grid/src/layout.c
        library/grid/src/matrix.c
        library/grid/src/register.c
        library/grid/src/state.c
        library/grid/src/unit.c
        library/grid/src/util.c
        library/grid/src/viewport.c
        library/methods/src/class_support.c
        library/methods/src/do_substitute_direct.c
        library/methods/src/init.c
        library/methods/src/methods.h
        library/methods/src/methods_list_dispatch.c
        library/methods/src/RSMethods.h
        library/methods/src/slot.c
        library/methods/src/tests.c
        library/methods/src/utils.c
        library/parallel/src/fork.c
        library/parallel/src/glpi.h
        library/parallel/src/init.c
        library/parallel/src/ncpus.c
        library/parallel/src/parallel.h
        library/parallel/src/rngstream.c
        library/splines/src/splines.c
        library/stats/src/ansari.c
        library/stats/src/approx.c
        library/stats/src/arima.c
        library/stats/src/bandwidths.c
        library/stats/src/burg.c
        library/stats/src/chisqsim.c
        library/stats/src/complete_cases.c
        library/stats/src/cov.c
        library/stats/src/d2x2xk.c
        library/stats/src/dblcen.c
        library/stats/src/deriv.c
        library/stats/src/distance.c
        library/stats/src/distn.c
        library/stats/src/family.c
        library/stats/src/fexact.c
        library/stats/src/fft.c
        library/stats/src/filter.c
        library/stats/src/fourier.c
        library/stats/src/hclust-utils.c
        library/stats/src/HoltWinters.c
        library/stats/src/influence.c
        library/stats/src/init.c
        library/stats/src/integrate.c
        library/stats/src/isoreg.c
        library/stats/src/kendall.c
        library/stats/src/kmeans.c
        library/stats/src/ks.c
        library/stats/src/ksmooth.c
        library/stats/src/line.c
        library/stats/src/lm.c
        library/stats/src/loessc.c
        library/stats/src/loglin.c
        library/stats/src/lowess.c
        library/stats/src/mAR.c
        library/stats/src/massdist.c
        library/stats/src/model.c
        library/stats/src/modreg.h
        library/stats/src/monoSpl.c
        library/stats/src/nls.c
        library/stats/src/nls.h
        library/stats/src/nscor.c
        library/stats/src/optim.c
        library/stats/src/optimize.c
        library/stats/src/pacf.c
        library/stats/src/port.c
        library/stats/src/port.h
        library/stats/src/PPsum.c
        library/stats/src/prho.c
        library/stats/src/random.c
        library/stats/src/rcont.c
        library/stats/src/rWishart.c
        library/stats/src/sbart.c
        library/stats/src/smooth.c
        library/stats/src/splines.c
        library/stats/src/Srunmed.c
        library/stats/src/starma.c
        library/stats/src/stats.h
        library/stats/src/statsR.h
        library/stats/src/swilk.c
        library/stats/src/Trunmed.c
        library/stats/src/ts.h
        library/stats/src/zeroin.c
        library/tcltk/src/init.c
        library/tcltk/src/tcltk.c
        library/tcltk/src/tcltk.h
        library/tcltk/src/tcltk_unix.c
        library/tcltk/src/tcltk_win.c
        library/tools/src/getfmts.c
        library/tools/src/gramLatex.c
        library/tools/src/gramRd.c
        library/tools/src/http.c
        library/tools/src/init.c
        library/tools/src/install.c
        library/tools/src/md5.c
        library/tools/src/md5.h
        library/tools/src/pdscan.c
        library/tools/src/Rmd5.c
        library/tools/src/signals.c
        library/tools/src/text.c
        library/tools/src/tools.h
        library/utils/src/windows/dataentry.c
        library/utils/src/windows/dialogs.c
        library/utils/src/windows/registry.c
        library/utils/src/windows/util.c
        library/utils/src/windows/widgets.c
        library/utils/src/init.c
        library/utils/src/io.c
        library/utils/src/size.c
        library/utils/src/sock.c
        library/utils/src/stubs.c
        library/utils/src/utils.c
        library/utils/src/utils.h
        main/agrep.c
        main/alloca.c
        main/altclasses.c
        main/altrep.c
        main/apply.c
        main/arithmetic.c
        main/arithmetic.h
        main/array.c
        main/attrib.c
        main/basedecl.h
        main/bind.c
        main/builtin.c
        main/character.c
        main/coerce.c
        main/colors.c
        main/CommandLineArgs.c
        main/complex.c
        main/connections.c
        main/context.c
        main/contour-common.h
        main/cum.c
        main/datetime.c
        main/datetime.h
        main/dcf.c
        main/debug.c
        main/deparse.c
        main/devices.c
        main/dotcode.c
        main/dounzip.c
        main/dstruct.c
        main/duplicate.c
        main/duplicate.h
        main/edit.c
        main/engine.c
        main/envir.c
        main/errors.c
        main/eval.c
        main/format.c
        main/g_alab_her.c
        main/g_cntrlify.c
        main/g_cntrlify.h
        main/g_control.h
        main/g_extern.h
        main/g_fontdb.c
        main/g_her_glyph.c
        main/g_her_metr.h
        main/g_jis.h
        main/gevents.c
        main/gram-ex.c
        main/gram.c
        main/graphics.c
        main/grep.c
        main/gzio.h
        main/identical.c
        main/inlined.c
        main/inspect.c
        main/internet.c
        main/iosupport.c
        main/lapack.c
        main/list.c
        main/localecharset.c
        main/logic.c
        main/machar.c
        main/main.c
        main/mapply.c
        main/match.c
        main/memory.c
        main/mkdtemp.c
        main/names.c
        main/objects.c
        main/options.c
        main/paste.c
        main/platform.c
        main/plot.c
        main/plot3d.c
        main/plotmath.c
        main/print.c
        main/printarray.c
        main/printutils.c
        main/printvector.c
        main/qsort-body.c
        main/qsort.c
        main/radixsort.c
        main/random.c
        main/raw.c
        main/RBufferUtils.h
        main/Rcomplex.h
        main/Rdynload.c
        main/registration.c
        main/relop.c
        main/Renviron.c
        main/rlocale.c
        main/rlocale_data.h
        main/Rmain.c
        main/RNG.c
        main/Rstrptime.h
        main/saveload.c
        main/scan.c
        main/seq.c
        main/serialize.c
        main/sort.c
        main/source.c
        main/split-incl.c
        main/split.c
        main/sprintf.c
        main/startup.c
        main/strdup.c
        main/strncasecmp.c
        main/subassign.c
        main/subscript.c
        main/subset.c
        main/summary.c
        main/sysutils.c
        main/times.c
        main/unique.c
        main/unzip.h
        main/util.c
        main/valid_utf8.h
        main/version.c
        main/xspline.c
        modules/internet/internet.c
        modules/internet/libcurl.c
        modules/internet/nanoftp.c
        modules/internet/nanohttp.c
        modules/internet/Rhttpd.c
        modules/internet/Rsock.c
        modules/internet/sock.c
        modules/internet/sock.h
        modules/internet/sockconn.c
        modules/lapack/init_win.c
        modules/lapack/Lapack.c
        modules/lapack/Lapack.h
        modules/lapack/vecLibg95c.c
        modules/X11/bitmap.h
        modules/X11/dataentry.c
        modules/X11/devX11.c
        modules/X11/devX11.h
        modules/X11/rbitmap.c
        modules/X11/rlogo_icon.h
        modules/X11/rotated.c
        modules/X11/rotated.h
        nmath/standalone/sunif.c
        nmath/standalone/test.c
        nmath/bd0.c
        nmath/bessel.h
        nmath/bessel_i.c
        nmath/bessel_j.c
        nmath/bessel_k.c
        nmath/bessel_y.c
        nmath/beta.c
        nmath/chebyshev.c
        nmath/choose.c
        nmath/cospi.c
        nmath/d1mach.c
        nmath/dbeta.c
        nmath/dbinom.c
        nmath/dcauchy.c
        nmath/dchisq.c
        nmath/dexp.c
        nmath/df.c
        nmath/dgamma.c
        nmath/dgeom.c
        nmath/dhyper.c
        nmath/dlnorm.c
        nmath/dlogis.c
        nmath/dnbeta.c
        nmath/dnbinom.c
        nmath/dnchisq.c
        nmath/dnf.c
        nmath/dnorm.c
        nmath/dnt.c
        nmath/dpois.c
        nmath/dpq.h
        nmath/dt.c
        nmath/dunif.c
        nmath/dweibull.c
        nmath/fmax2.c
        nmath/fmin2.c
        nmath/fprec.c
        nmath/fround.c
        nmath/fsign.c
        nmath/ftrunc.c
        nmath/gamma.c
        nmath/gamma_cody.c
        nmath/gammalims.c
        nmath/i1mach.c
        nmath/imax2.c
        nmath/imin2.c
        nmath/lbeta.c
        nmath/lgamma.c
        nmath/lgammacor.c
        nmath/log1p.c
        nmath/mlutils.c
        nmath/nmath.h
        nmath/nmath2.h
        nmath/pbeta.c
        nmath/pbinom.c
        nmath/pcauchy.c
        nmath/pchisq.c
        nmath/pexp.c
        nmath/pf.c
        nmath/pgamma.c
        nmath/pgeom.c
        nmath/phyper.c
        nmath/plnorm.c
        nmath/plogis.c
        nmath/pnbeta.c
        nmath/pnbinom.c
        nmath/pnchisq.c
        nmath/pnf.c
        nmath/pnorm.c
        nmath/pnt.c
        nmath/polygamma.c
        nmath/ppois.c
        nmath/pt.c
        nmath/ptukey.c
        nmath/punif.c
        nmath/pweibull.c
        nmath/qbeta.c
        nmath/qbinom.c
        nmath/qcauchy.c
        nmath/qchisq.c
        nmath/qexp.c
        nmath/qf.c
        nmath/qgamma.c
        nmath/qgeom.c
        nmath/qhyper.c
        nmath/qlnorm.c
        nmath/qlogis.c
        nmath/qnbeta.c
        nmath/qnbinom.c
        nmath/qnchisq.c
        nmath/qnf.c
        nmath/qnorm.c
        nmath/qnt.c
        nmath/qpois.c
        nmath/qt.c
        nmath/qtukey.c
        nmath/qunif.c
        nmath/qweibull.c
        nmath/rbeta.c
        nmath/rbinom.c
        nmath/rcauchy.c
        nmath/rchisq.c
        nmath/rexp.c
        nmath/rf.c
        nmath/rgamma.c
        nmath/rgeom.c
        nmath/rhyper.c
        nmath/rlnorm.c
        nmath/rlogis.c
        nmath/rmultinom.c
        nmath/rnbinom.c
        nmath/rnchisq.c
        nmath/rnorm.c
        nmath/rpois.c
        nmath/rt.c
        nmath/runif.c
        nmath/rweibull.c
        nmath/sexp.c
        nmath/sign.c
        nmath/signrank.c
        nmath/snorm.c
        nmath/stirlerr.c
        nmath/toms708.c
        nmath/wilcox.c
        unix/dynload.c
        unix/Rembedded.c
        unix/Rscript.c
        unix/Runix.h
        unix/sys-std.c
        unix/sys-unix.c
        unix/system.c
        unix/X11.c)
